Favicon and includes

--- a/_includes/custom/custom_head_before_css.html
+++ b/_includes/custom/custom_head_before_css.html
@@ -1,4 +1,5 @@
 <!-- start custom head snippets -->
+<link rel="shortcut icon" type="image/x-icon" href="/assets/img/favicon/favicon.ico?">
 
 <!-- this script is inserted before the css stylesheet -->
 
