--- a/_includes/snippets/homepage-services.html
+++ b/_includes/snippets/homepage-services.html
@@ -42,7 +42,8 @@
 
 <script>
 document.addEventListener('DOMContentLoaded', function () {
-  const baseUrl = '{{ "" | relative_url }}/';  // Ensure trailing slash
+//  const baseUrl = '{{ "" | relative_url }}/';  // Ensure trailing slash
+  const baseUrl = '{{ "" }}/';  // Ensure trailing slash
 
   const serviceImages = document.querySelectorAll('.service-img');
 
